# fdf

./: CMakeLists.txt  Makefile  fdf.c  fdf.h
fdf.dSYM/Contents/Resources/DWARF/: fdf
include/: fdf.h
libft/: Makefile  ft_strlen.c
maps/: 42.fdf  5.fdf  6.fdf  color.fdf
src/: debag.c  distance_approach.c  draw_map.c  error.c  fdf.c  free_split.c  ft_abs.c  ft_atoi_base.c  ft_atoi_er.c  function_point.c  init_window.c  isometric.c  key_press.c  map_center.c  map_creation.c  pars_color.c  shift.c  size_designation.c  starting_position.c  validation.c  validation_2.c
